--- a/my-resume-ui/public/index.html
+++ b/my-resume-ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My Resume"
+      content="Adrian Dolha"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
